2010-08-11  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Alexey Proskuryakov.

        REGRESSION(65135): format specifier warnings
        https://bugs.webkit.org/show_bug.cgi?id=43876

        * websockets/WebSocketChannel.cpp:
        (WebCore::WebSocketChannel::appendToBuffer): cast size_t to unsigned long for %lu.
        (WebCore::WebSocketChannel::processBuffer): cast size_t to unsigned long for %lu.

git-svn-id: svn://svn.chromium.org/blink/trunk@65219 bbb929c8-8fbe-4397-9dbb-9b2b20218538